feat: 发送欢迎邮件、短信/邮件验证码功能集成
